# agentverse

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: codeql.yml  pylint.yml  python-package.yml  python-publish.yml
agentverse/: __init__.py
agentverse/agents/: __init__.py  base_agent.py  haptic_agent.py  teacher_agent.py
agentverse/haptics/: __init__.py  force_sim.py  sensor_sim.py  touch_sim.py
agentverse/models/: __init__.py  embedding.py  motoko.py  spatial.py
agentverse/sim/: __init__.py  mujoco_env.py  usd_loader.py
agentverse/training/: __init__.py  curriculum.py  reward.py  trainer.py
agentverse/utils/: __init__.py  config.py  data.py  logger.py
configs/: agent_config.yaml  default_env.yaml
docs/: api_reference.md  architecture.md  getting_started.md
examples/: basic_agent.py  haptic_training.py  multi_agent.py
tests/: test_agents.py  test_env.py  test_haptics.py  test_models.py
