[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentverse"
version = "0.1.0"
description = "Haptics-first agentic simulation platform by Haptis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Haptis" },
  { name = "Monodox" }
]
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "pydantic>=2.0.0",
  "mujoco>=3.0.0",
  "dm-control>=1.0.0",
  "torch>=2.1.0",
  "transformers>=4.38.0",
  "peft>=0.9.0",
  "datasets>=2.18.0",
  "ray[rllib]>=2.9.0",
  "gymnasium>=0.29.0",
  "huggingface-hub>=0.21.0",
  "safetensors>=0.4.0",
  "ray[default]>=2.9.0",
  "boto3>=1.34.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "h5py>=3.10.0",
  "matplotlib>=3.8.0",
  "wandb>=0.16.0",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
  "python-dotenv>=1.0.0",
  "loguru>=0.7.0"
]
keywords = ["haptics", "robotics", "simulation", "agents", "reinforcement-learning", "mujoco"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "black>=24.0.0",
  "ruff>=0.3.0"
]

[tool.setuptools.packages.find]
include = ["agentverse*"]
